load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "webrtc",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    cdeps = [
        "@boringssl//:crypto",
        "@boringssl//:ssl",
    ],
    cgo = True,
    importpath = "github.com/pion/webrtc/v4",
    importpath_aliases = ["github.com/pion/webrtc"],
    visibility = ["//visibility:public"],
    deps = [
        "//internal/fmtp",
        "//internal/mux",
        "//internal/util",
        "//pkg/media",
        "//pkg/rtcerr",
        "@com_github_pion_datachannel//:datachannel",
        "@com_github_pion_dtls_v3//:dtls",
        "@com_github_pion_dtls_v3//pkg/crypto/elliptic",
        "@com_github_pion_dtls_v3//pkg/crypto/fingerprint",
        "@com_github_pion_dtls_v3//pkg/protocol/handshake",
        "@com_github_pion_ice_v4//:ice",
        "@com_github_pion_interceptor//:interceptor",
        "@com_github_pion_interceptor//pkg/flexfec",
        "@com_github_pion_interceptor//pkg/nack",
        "@com_github_pion_interceptor//pkg/report",
        "@com_github_pion_interceptor//pkg/rfc8888",
        "@com_github_pion_interceptor//pkg/stats",
        "@com_github_pion_interceptor//pkg/twcc",
        "@com_github_pion_logging//:logging",
        "@com_github_pion_randutil//:randutil",
        "@com_github_pion_rtcp//:rtcp",
        "@com_github_pion_rtp//:rtp",
        "@com_github_pion_rtp//codecs",
        "@com_github_pion_sctp//:sctp",
        "@com_github_pion_sdp_v3//:sdp",
        "@com_github_pion_srtp_v3//:srtp",
        "@com_github_pion_stun_v3//:stun",
        "@com_github_pion_transport_v4//:transport",
        "@com_github_pion_transport_v4//packetio",
        "@org_golang_x_net//proxy",
    ],
)

alias(
    name = "go_default_library",
    actual = ":webrtc",
    visibility = ["//visibility:public"],
)
