load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mux",
    srcs = [
        "endpoint.go",
        "mux.go",
        "muxfunc.go",
    ],
    importpath = "github.com/pion/webrtc/v4/internal/mux",
    importpath_aliases = ["github.com/pion/webrtc/internal/mux"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_pion_ice_v4//:ice",
        "@com_github_pion_logging//:logging",
        "@com_github_pion_transport_v4//packetio",
    ],
)

alias(
    name = "go_default_library",
    actual = ":mux",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "mux_test",
    srcs = ["mux_test.go"],
    embed = [":mux"],
    deps = [
        "@com_github_pion_logging//:logging",
        "@com_github_pion_transport_v4//packetio",
        "@com_github_pion_transport_v4//test",
        "@com_github_stretchr_testify//require",
    ],
)
