load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "oggreader",
    srcs = ["oggreader.go"],
    importpath = "github.com/pion/webrtc/v4/pkg/media/oggreader",
    importpath_aliases = ["github.com/pion/webrtc/pkg/media/oggreader"],
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":oggreader",
    visibility = ["//visibility:public"],
)
